@@ -92,9 +92,6 @@ LOCAL_STATIC_LIBRARIES += \
 	libcrypto-prebuilt \
 	libz-prebuilt
 
-LOCAL_LD_LIBS += \
-	-ldl -lpthread
-	
 LOCAL_SRC_FILES := \
 	../external-sqlite/sqlite3.c \
 	src/addoncallbacks.cpp \
